<resources>
    <string name="app_name">CarritoCompras</string>

    //toolbar
    <string name="titulo_order">Ordenar por</string>
    <string name="titulo_add">Añadir producto</string>

    //Texto Splash
    <string name="Compañia" translatable="false">LircayHUB</string>
    <string name="Nombre" translatable="false">Diego Valderrama</string>
    <string name="Correo" translatable="false">dvalderrama20@alumnos.utalca.cl</string>

    //Texto Ejemplo
    <string name="titulo">Informacion de Producto</string>
    <string name="N_ejemplo">Nombre</string>
    <string name="T_ejemplo">Vegetal - Fruta - Bebestible</string>
    <string name="C_ejemplo">Cantidad</string>
    <string name="P_ejemplo">Precio</string>

    //Botones
    <string name="buscar">Buscar</string>
    <string name="añadir">Agregar</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="regresar">Regresar</string>

    //Texto Orden
    <string name="Por_Cantida">Cantidad de producto</string>
    <string name="A_Z" translatable="false">A - Z</string>
    <string name="Por_Tipo">Tipo de producto</string>
    <string name="orden">Ordenado por:</string>

    //Item list menu
    <string name="mostrar">Mostrar</string>
    <string name="editar">Editar</string>
    <string name="borrar">Eliminar</string>

    <string name="message_delete_item">¿Estas seguro de borrar este item?</string>


</resources>