<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="adapter.UserNewDialog">

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/N_ejemplo"
        />

    <EditText
        android:id="@+id/editTextTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/T_ejemplo"
        />

    <EditText
        android:id="@+id/editTextCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/C_ejemplo"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/editTextPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/P_ejemplo"
        android:inputType="number"
        />

    <!-- Add more UI elements for capturing symptoms if needed -->

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        />

</LinearLayout>